--- a/main/src/components/components.css
+++ b/main/src/components/components.css
@@ -1,5 +1,4 @@
 .contact{
-	background-color: #f5f5f5;
 	padding: 20px;
 	margin-top: 20px;
 	border-radius: 5px;
@@ -25,6 +24,10 @@
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+.project-collection{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
 
 .submit-btn{
 	background-color: #f5f5f5;
@@ -46,7 +49,10 @@
 	background-color: #f5f5f5;
 }
 @media only screen and (max-width:600px){
-    .card-collection{
+    .skill-collection{
+        grid-template-columns: 1fr;
+    }
+	.project-collection{
         grid-template-columns: 1fr;
     }
 }
